Fixed missaligned checkout buttons

--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -572,6 +572,19 @@
 }
 
 // Table
+.ecombasketsummary__summary-form {
+    .display-flex;
+    .align-items(flex-end);
+
+    .button {
+        min-height: auto;
+        padding: 8px 12px;
+    }
+
+    .ecombasketsummary__continue-shopping {
+        display: inline-block;
+    }
+}
 
 .ecombasketsummary {
     form,
